# balance-effects

./: README.md  pyproject.toml
balance_effects/: main.py  main_t1.py  predictions.csv  prototype.ipynb
balance_effects/resources/: openAI_key.json
