[tool.poetry]
name = "balance-effects"
version = "0.1.0"
description = ""
authors = ["Tasio Roncal <roncal.73162@e.unvarra.es>", "Javier Granda <roncal.73162@e.unvarra.es>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.1.4"
scikit-learn = "^1.3.2"
matplotlib = "^3.8.2"
seaborn = "^0.13.1"
openai = "^1.7.1"



[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
